[tool.poetry]
name = "gym-friend"
version = "0.1.0"
description = ""
authors = ["Sage-Park <sagepark94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
pillow = "^10.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
